цвета, лого, иконки, карта

--- a/src/blocks/footer/__personal/footer__personal.css
+++ b/src/blocks/footer/__personal/footer__personal.css
@@ -1,6 +1,6 @@
 .footer__personal {
   text-decoration: none;
-  color: grey;
+  color: #2f2f2f;
   cursor: pointer;
   font-size: 12px;
   margin: 30px 0 0 0;
