--- a/src/blocks/header/__burger-type/header__burger-type.css
+++ b/src/blocks/header/__burger-type/header__burger-type.css
@@ -1,5 +1,5 @@
   .header__burger-type {
-    background-color: #5F8EB3;
+    background-color: #52C0F2;
     display: none;
     flex-direction: column;
     align-items: center;
