--- a/src/blocks/header/_scroll/header_scroll.css
+++ b/src/blocks/header/_scroll/header_scroll.css
@@ -1,5 +1,5 @@
 .header_scroll {
   opacity: .8;
-  background-color:#5F8EB3;
+  background-color: #52C0F2;
   transition: background-color 2s ease;
 }
