--- a/src/blocks/main/__submit-button/main__submit-button.css
+++ b/src/blocks/main/__submit-button/main__submit-button.css
@@ -1,6 +1,6 @@
 .main__submit-button {
   margin: 0;
-  background-color: orangered;
+  background-color: #F25E63;
   border: none;
   border-radius: 100px;
   padding: 10px;
