--- a/src/blocks/copyright/copyright.css
+++ b/src/blocks/copyright/copyright.css
@@ -1,8 +1,8 @@
 .copyright {
   width: 100%;
   height: 50px;
-  background-color: #080849;
-  color: grey;
+  background-color: #436575;
+  color: #2f2f2f;
 }
 
 @media screen and (max-width: 400px) {
