--- a/src/blocks/footer/__call/footer__call.css
+++ b/src/blocks/footer/__call/footer__call.css
@@ -1,12 +1,13 @@
 .footer__call {
   margin: 0;
   cursor: pointer;
-  background-color: orangered;
+  background-color: #F25E63;
   border: none;
   padding: 5px;
   border-radius: 100px;
   font-size: 16px;
   font-weight: 400;
+  color: white;
 }
 
 .footer__call:hover {
