--- a/src/blocks/form/__submit-button/form__submit-button.css
+++ b/src/blocks/form/__submit-button/form__submit-button.css
@@ -1,8 +1,8 @@
 .form__submit-button {
   margin: 0;
   min-height: 65px;
-  background-color: orangered;
-  border: 1px solid orangered;
+  background-color: #F25E63;
+  border: 1px solid #F25E63;
   cursor: pointer;
   font-size: 20px;
   font-weight: 700;
