--- a/src/blocks/header/__block/header__block.css
+++ b/src/blocks/header/__block/header__block.css
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  color: white;
+  color: black;
   height: 100%;
 }
 
