--- a/src/blocks/header/__call/header__call.css
+++ b/src/blocks/header/__call/header__call.css
@@ -2,7 +2,7 @@
   margin: 0;
   color: white;
   cursor: pointer;
-  background-color: orangered;
+  background-color: #F25E63;
   border: none;
   border-radius: 100px;
   padding: 5px;
