--- a/src/blocks/header/__consult-burger/header__consult-burger.css
+++ b/src/blocks/header/__consult-burger/header__consult-burger.css
@@ -4,7 +4,7 @@
   margin: 0 0 30px 0;
   color: white;
   cursor: pointer;
-  background-color: orangered;
+  background-color: #F25E63;
   border: none;
   border-radius: 100px;
   padding: 5px;
