--- a/src/blocks/header/_privacy/header_privacy.css
+++ b/src/blocks/header/_privacy/header_privacy.css
@@ -1,6 +1,6 @@
 .header_privacy {
   position: static;
-  background-color:#5F8EB3;
+  background-color:#52C0F2;
   margin: 0;
   height: 70px;
   z-index: 100;
