--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -8,7 +8,7 @@
   width: 100%;
   min-height: 100vh;
   padding-top: 0;
-  /* background-image: url(../../images/main/main.webp); */
+  background-image: url(../../images/main/main.webp);
 }
 
 @media screen and (max-width: 1300px) {
