--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,6 +9,7 @@
 @import url(../blocks/header/__img/header__img.css);
 @import url(../blocks/header/__item/header__item.css);
 @import url(../blocks/header/__item/_active/header__item_active.css);
+@import url(../blocks/header/__item/_black/header__item_black.css);
 @import url(../blocks/header/__phone/header__phone.css);
 @import url(../blocks/header/__tel/header__tel.css);
 @import url(../blocks/header/__nav/header__nav.css);
