--- a/src/blocks/popup/__submit-button/popup__submit-button.css
+++ b/src/blocks/popup/__submit-button/popup__submit-button.css
@@ -5,7 +5,7 @@
   min-height: 50px;
   margin: 0;
   padding: 0;
-  background-color: #ff4500;
+  background-color: #F25E63;
   border: none;
   border-radius: 100px;
   color: white;
