--- a/src/blocks/about/__link/about__link.css
+++ b/src/blocks/about/__link/about__link.css
@@ -1,23 +1,22 @@
 .about__link {
   margin: 0;
   cursor: pointer;
-  color: midnightblue;
-  font-size: 18px;
+  color: deeppink;
+  font-size: 22px;
+  font-weight: 700;
   text-decoration: none;
-}
-
-.about__link:hover {
-  text-decoration: underline;
+  display: flex;
+  align-items: center;
 }
 
 @media screen and (max-width: 1300px) {
   .about__link {
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 
 @media screen and (max-width: 1200px) {
   .about__link {
-    font-size: 14px;
+    font-size: 16x;
   }
 }
