--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -50,6 +50,9 @@
 @import url(../blocks/about/__title/about__title.css);
 @import url(../blocks/about/__link/about__link.css);
 @import url(../blocks/about/_hidden/about_hidden.css);
+@import url(../blocks/about/__arrow/popup__arrow.css);
+@import url(../blocks/about/__bold/about__bold.css);
+@import url(../blocks/about/__color/about__color.css);
 @import url(../blocks/technical/technical.css);
 @import url(../blocks/technical/__title/technical__title.css);
 @import url(../blocks/technical/__grid/technical__grid.css);
@@ -118,6 +121,8 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__personal/popup__personal.css);
 @import url(../blocks/popup/__thanks-button/popup__thanks-button.css);
+@import url(../blocks/popup/__container/_fullsize/popup__container_fullsize.css);
+@import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/form-area/form-area.css);
 @import url(../blocks/form-area/__subtitle/form-area__subtitle.css);
 @import url(../blocks/form-area/__title/form-area__title.css);
