--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  font-family: "OpenSans", Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   color: black;
   margin: 0 auto 0 auto;
   text-rendering: optimizeLegibility;
